--- a/app/globals.css
+++ b/app/globals.css
@@ -7,12 +7,12 @@
   --foreground: #171717;
 }
 
-/*@media (prefers-color-scheme: dark) {*/
-/*  :root {*/
-/*    --background: #151b23;*/
-/*    --foreground: #ededed;*/
-/*  }*/
-/*}*/
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #151b23;
+    --foreground: #ededed;
+  }
+}
 
 body {
   color: var(--foreground);
@@ -25,3 +25,4 @@ body {
     text-wrap: balance;
   }
 }
+
