--- a/app/globals.css
+++ b/app/globals.css
@@ -24,5 +24,9 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .nav-link {
+    @apply text-zinc-500 hover:text-zinc-800 transition-colors
+  }
 }
 
